--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
     width: 90%;
     max-width: 300px;
     margin: 20px auto;
-    padding: 20px 15px;
+    padding: 0;
     border: 4px solid rgb(250, 210, 232);
     background-color: rgb(250, 167, 211);
     color: #fff;
@@ -31,6 +31,9 @@ h1 a {
     color: inherit;
     text-decoration: none;
     display: block;
+    width: 100%;
+    padding: 20px 15px;
+    box-sizing: border-box;
 }
 h1 a:visited {
     color: inherit;
@@ -123,19 +126,19 @@ h2 {
 /* ボタン */
 button {
     display: block;
-    margin: 20px auto;
-    padding: 12px 24px;
-    background: #f2cdd2;
-    color: #000;
-    border: 3px solid #fe7484;
-    border-radius: 5px;
-    font-size: 16px;
+    margin: 20px 0;
+    padding: 0;
+    background: none;
+    color: #f00;
+    border: none;
+    font-size: 15px;
     cursor: pointer;
-    box-shadow: 3px 3px 7px #301619;
+    text-decoration: underline;
+    box-shadow: none;
 }
 
 button:hover {
-    background: #f8929e;
+    color: rgb(131, 2, 2);
 }
 
 /* メインのｐ */
@@ -384,8 +387,13 @@ main a, button, label {
     
     h1 {
         font-size: 250%;
-        padding: 30px 20px;
+        padding: 0;
         margin: 40px auto;
+    }
+    
+    h1 a {
+        padding: 30px 20px;
+        box-sizing: border-box;
     }
     
     header p {
