--- a/style.css
+++ b/style.css
@@ -187,14 +187,12 @@ input[type="checkbox"] {
 }
 
 .iframe-wrap iframe {
-    width: 100%;
-    height: 100%;
+    width: 250%;
+    height: 250%;
     border: none;
     border-radius: 14px;
-    transform: scale(0.85);
+    transform: scale(0.4);
     transform-origin: 0 0;
-    width: 117.6%;
-    height: 117.6%;
 }
 
 .waku {
@@ -452,6 +450,12 @@ main a, button, label {
     
     .kome, .iframe-wrap {
         height: 550px;
+    }
+    
+    .iframe-wrap iframe {
+        width: 105%;
+        height: 105%;
+        transform: scale(0.95);
     }
     
     #ue {
